--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
           },
           "headers": {
             "Accept": "application/json",
-            "apikey": "gP3q7vnlvTXVLRfMd2RvAz4zFCKdevj0"
+            "apikey": ""
           }
         }
       }
